ns-mesh-external.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: mesh-external
  name: mesh-external
